# satellite

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: deploy_documentation.yml
data/: blue_patch_27_2_by_6_LC08_L1TP_032030_20160420_20170223_01_T1.TIF  blue_patch_27_2_by_6_LC08_L1TP_034029_20160520_20170223_01_T1.TIF  cloud_segmentation_dataset_filtered.csv  green_patch_27_2_by_6_LC08_L1TP_032030_20160420_20170223_01_T1.TIF  green_patch_27_2_by_6_LC08_L1TP_034029_20160520_20170223_01_T1.TIF  index.html  nir_patch_27_2_by_6_LC08_L1TP_032030_20160420_20170223_01_T1.TIF  nir_patch_27_2_by_6_LC08_L1TP_034029_20160520_20170223_01_T1.TIF  red_patch_27_2_by_6_LC08_L1TP_032030_20160420_20170223_01_T1.TIF  red_patch_27_2_by_6_LC08_L1TP_034029_20160520_20170223_01_T1.TIF
docs/: data.md  index.md  inference.md  training.md
inference/: index.html
pulsar_detection/: data_analysis.ipynb
satellite/: note.txt
satellite/data_analysis/: data.ipynb
satellite/docs/: index.md
satellite/domain/: models.py
satellite/exploration/: dataset.csv  dataset_31UDQ_202505.csv  explo2.ipynb  inference.ipynb  new_method.ipynb  visualisation.ipynb
satellite/exploration/models/: simple_unet_v2_subset100_epoch10.pth
satellite/inference_dataset/: sentinel.ipynb
satellite/infrastructure/: matplotlib_vis.py  pillow_rasterio.py  pytorch.py
satellite/model/: notebook.ipynb
satellite/onion/: main.py
satellite/onion/adapters/: jp2_loader.py  tiler_adapter.py
satellite/onion/application/: inference_pipeline.py
satellite/onion/domain/: image_stitcher.py  mask_filter.py  tile.py
satellite/onion/infrastructure/: image_saver.py  model_loader.py
satellite/scripts/: create_csv_training_dataset.py  download_sentinel_files.py  generate_preview.py  load.py  predict.py  run_inference.py  stack_sentinel_files.py
satellite/src/adapters/: jp2_loader.py  tiler_adapter.py
satellite/src/application/: inference_pipeline.py  pipelines.py  previsualisation_pipeline.py  services.py
satellite/src/domain/: band.py  image.py  image_stitcher.py  tile.py
satellite/src/infrastructure/: jp2.py  model.py  sentinel.py
search/: search_index.json
training/: index.html
